.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: k8s
spec:
  selector:
    matchLabels:
      app: k8s
  template:
    metadata:
      labels:
        app: k8s
    spec:
      containers:
        - env:
            - name: CONTAINER_ROLE
              value: app
          image: localhost:32000/k8s-test
          imagePullPolicy: Always
          name: laravel-app
          ports:
            - containerPort: 80
