.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
  namespace: k8s
spec:
  type: ClusterIP
  selector:
    app: k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
