.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
spec:
  rules:
    - host: k8s.derpierre65.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-app
                port:
                  number: 80
