.k8s/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: k8s-app
          image: localhost:32000/k8s-test
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
spec:
  rules:
    - host: k8s.derpierre65.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-app
                port:
                  number: 80
